added article section

--- a/app/index.html
+++ b/app/index.html
@@ -105,7 +105,6 @@
                                 <div class="slider-top__content">
                                     <h3 class="slider-top__title">
                                         smart and
-                                        trendysmart and
                                         trendy
                                     </h3>
                                     <div class="slider-top__text">
@@ -640,92 +639,246 @@
                     </li>
                 </ul>
 
-                <ul class="design-cards">
-                    <li class="design-cards__item mix design-a"
-                        style="background-image: url('images/design/item1.jpg');">
-                        <a class="design-cards__link" href="#">
-                            <h3 class="design-cards__title">
-                                Beat Flat Pendant
-                                Black
-                            </h3>
-                            <span class="design-cards__type">
-                                Classic
-                            </span>
+                <ul class="design__cards">
+                    <li class="design__item mix design-a">
+                        <article class="design-card">
+                            <a class="design-card__link" href="#">
+                                <h3 class="design-card__title">
+                                    Beat Flat Pendant
+                                    Black
+                                </h3>
+                                <span class="design-card__type">
+                                    Classic
+                                </span>
+                                <div class="design-card__image">
+                                    <img class="design-card__img" src="images/design/item1.png" alt="">
+                                </div>
+                            </a>
+                        </article>
+                    </li>
+                    <li class="design__item mix design-b">
+                        <article class="design-card">
+                            <a class="design-card__link" href="#">
+                                <h3 class="design-card__title">
+                                    Lampe Sur Pieds
+                                    Bamboo
+                                </h3>
+                                <span class="design-card__type">
+                                    Classic
+                                </span>
+                                <div class="design-card__image">
+                                    <img class="design-card__img" src="images/design/item2.png" alt="">
+                                </div>
+                            </a>
+                        </article>
+                    </li>
+                    <li class="design__item mix design-c">
+                        <article class="design-card">
+                            <a class="design-card__link" href="#">
+                                <h3 class="design-card__title">
+                                    Rattan Rocking
+                                    Chair
+                                </h3>
+                                <span class="design-card__type">
+                                    Classic
+                                </span>
+                                <div class="design-card__image">
+                                    <img class="design-card__img" src="images/design/item3.png" alt="">
+                                </div>
+                            </a>
+                        </article>
+                    </li>
+                    <li class="design__item mix design-d">
+                        <article class="design-card">
+                            <a class="design-card__link" href="#">
+                                <h3 class="design-card__title">
+                                    Rattan Rocking
+                                    Chair
+                                </h3>
+                                <span class="design-card__type">
+                                    Classic
+                                </span>
+                                <div class="design-card__image">
+                                    <img class="design-card__img" src="images/design/item4.png" alt="">
+                                </div>
+                            </a>
+                        </article>
+                    </li>
+                    <li class="design__item mix design-a">
+                        <article class="design-card">
+                            <a class="design-card__link" href="#">
+                                <h3 class="design-card__title">
+                                    Rattan Rocking
+                                    Chair
+                                </h3>
+                                <span class="design-card__type">
+                                    Classic
+                                </span>
+                                <div class="design-card__image">
+                                    <img class="design-card__img" src="images/design/item5.png" alt="">
+                                </div>
+                            </a>
+                        </article>
+                    </li>
+                    <li class="design__item mix design-b">
+                        <article class="design-card">
+                            <a class="design-card__link" href="#">
+                                <h3 class="design-card__title">
+                                    Lampe Sur Pieds
+                                    Bamboo
+                                </h3>
+                                <span class="design-card__type">
+                                    Classic
+                                </span>
+                                <div class="design-card__image">
+                                    <img class="design-card__img" src="images/design/item6.png" alt="">
+                                </div>
+                            </a>
+                        </article>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <div class="video-popup">
+            <a class="video-popup__play" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
+                <svg width="22px" height="25px">
+                    <path fill-rule="evenodd" fill="rgb(255, 255, 255)"
+                        d="M20.684,14.740 L4.640,24.536 C4.139,24.842 3.559,24.997 2.977,24.997 C2.498,24.997 2.017,24.891 1.578,24.680 C0.606,24.210 -0.001,23.293 -0.001,22.295 L-0.001,2.700 C-0.001,1.701 0.606,0.783 1.578,0.314 C2.549,-0.155 3.727,-0.100 4.640,0.457 L20.684,10.255 C21.506,10.757 21.999,11.598 21.999,12.496 C21.999,13.396 21.506,14.237 20.684,14.740 Z" />
+                </svg>
+            </a>
+        </div>
+
+        <section class="articles">
+            <div class="container">
+                <div class="articles__header">
+                    <h2 class="title articles__title">
+                        Our Insights & Articles
+                    </h2>
+                    <a class="articles__all link" href="#">
+                        View All
+                    </a>
+                </div>
+                <ul class="articles__inner">
+                    <li class="articles__item">
+                        <article class="article-card">
+                            <div class="article-card__image">
+                                <img class="article-card__img" src="images/articles/item1.jpg" alt="news picture">
+                            </div>
+                            <a class="article-card__news" href="#">
+                                news
+                            </a>
+                            <div class="article-card__content">
+                                <div class="article-card__text">
+                                    <a class="article-card__link" href="#">
+                                        <p>
+                                            Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                                            veniam
+                                        </p>
+                                    </a>
+                                </div>
+                                <div class="article-card__bottom">
+                                    <span class="article-card__date">
+                                        28 january, 2020
+                                    </span>
+                                    <a class="article-card__author" href="#">
+                                        by admin
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="articles__item">
+                        <article class="article-card">
+                            <div class="article-card__image">
+                                <img class="article-card__img" src="images/articles/item2.jpg" alt="news picture">
+                            </div>
+                            <a class="article-card__news" href="#">
+                                news
+                            </a>
+                            <div class="article-card__content">
+                                <div class="article-card__text">
+                                    <a class="article-card__link" href="#">
+                                        <p>
+                                            Aonsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                                            dolore
+                                        </p>
+                                    </a>
+                                </div>
+                                <div class="article-card__bottom">
+                                    <span class="article-card__date">
+                                        28 january, 2020
+                                    </span>
+                                    <a class="article-card__author" href="#">
+                                        by admin
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="articles__item">
+                        <article class="article-card">
+                            <div class="article-card__image">
+                                <img class="article-card__img" src="images/articles/item3.jpg" alt="news picture">
+                            </div>
+                            <a class="article-card__news" href="#">
+                                news
+                            </a>
+                            <div class="article-card__content">
+                                <div class="article-card__text">
+                                    <a class="article-card__link" href="#">
+                                        <p>
+                                            Rncididunt ut labore et dolore magna aliqua. Ut enim
+                                        </p>
+                                    </a>
+                                </div>
+                                <div class="article-card__bottom">
+                                    <span class="article-card__date">
+                                        28 january, 2020
+                                    </span>
+                                    <a class="article-card__author" href="#">
+                                        by admin
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+                    </li>
+                </ul>
+
+                <ul class="partners">
+                    <li class="partners__item">
+                        <a class="partners__link" href="#">
+                            <img src="images/partners/item1.png" alt="" class="partners__img">
                         </a>
                     </li>
-                    <li class="design-cards__item mix design-b"
-                        style="background-image: url('images/design/item2.jpg');">
-                        <a class="design-cards__link" href="#">
-                            <h3 class="design-cards__title">
-                                Lampe Sur Pieds
-                                Bamboo
-                            </h3>
-                            <span class="design-cards__type">
-                                Classic
-                            </span>
-                            <div class="design-cards__image">
-                                <img class="design-cards__img" src="" alt="">
-                            </div>
+                    <li class="partners__item">
+                        <a class="partners__link" href="#">
+                            <img src="images/partners/item2.png" alt="" class="partners__img">
                         </a>
                     </li>
-                    <li class="design-cards__item mix design-c"
-                        style="background-image: url('images/design/item3.jpg');">
-                        <a class="design-cards__link" href="#">
-                            <h3 class="design-cards__title">
-                                Rattan Rocking
-                                Chair
-                            </h3>
-                            <span class="design-cards__type">
-                                Classic
-                            </span>
-                            <div class="design-cards__image">
-                                <img class="design-cards__img" src="" alt="">
-                            </div>
+                    <li class="partners__item">
+                        <a class="partners__link" href="#">
+                            <img src="images/partners/item3.png" alt="" class="partners__img">
                         </a>
                     </li>
-                    <li class="design-cards__item mix design-d"
-                        style="background-image: url('images/design/item4.jpg');">
-                        <a class="design-cards__link" href="#">
-                            <h3 class="design-cards__title">
-                                Rattan Rocking
-                                Chair
-                            </h3>
-                            <span class="design-cards__type">
-                                Classic
-                            </span>
-                            <div class="design-cards__image">
-                                <img class="design-cards__img" src="" alt="">
-                            </div>
+                    <li class="partners__item">
+                        <a class="partners__link" href="#">
+                            <img src="images/partners/item4.png" alt="" class="partners__img">
                         </a>
                     </li>
-                    <li class="design-cards__item mix design-a"
-                        style="background-image: url('images/design/item5.jpg');">
-                        <a class="design-cards__link" href="#">
-                            <h3 class="design-cards__title">
-                                Rattan Rocking
-                                Chair
-                            </h3>
-                            <span class="design-cards__type">
-                                Classic
-                            </span>
-                            <div class="design-cards__image">
-                                <img class="design-cards__img" src="" alt="">
-                            </div>
+                    <li class="partners__item">
+                        <a class="partners__link" href="#">
+                            <img src="images/partners/item5.png" alt="" class="partners__img">
                         </a>
                     </li>
-                    <li class="design-cards__item mix design-b"
-                        style="background-image: url('images/design/item6.jpg');">
-                        <a class="design-cards__link" href="#">
-                            <h3 class="design-cards__title">
-                                Lampe Sur Pieds
-                                Bamboo
-                            </h3>
-                            <span class="design-cards__type">
-                                Classic
-                            </span>
-                            <div class="design-cards__image">
-                                <img class="design-cards__img" src="" alt="">
-                            </div>
+                    <li class="partners__item">
+                        <a class="partners__link" href="#">
+                            <img src="images/partners/item4.png" alt="" class="partners__img">
+                        </a>
+                    </li>
+                    <li class="partners__item">
+                        <a class="partners__link" href="#">
+                            <img src="images/partners/item5.png" alt="" class="partners__img">
                         </a>
                     </li>
                 </ul>
@@ -865,10 +1018,6 @@
                 </nav>
             </div>
         </div>
-
-        <svg>
-            <use xlink:href="sprite/sprite.svg#search"></use>
-        </svg>
 
     </footer>
 
