--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
     </header>
 
-    <!-- <main class="main">
+    <main class="main">
         <h1 class="sr-only">clothes shop Glee</h1>
         <section class="slider-top">
             <h2 class="sr-only">clothes shop Glee</h2>
@@ -1021,7 +1021,7 @@
             </div>
         </div>
 
-    </footer> -->
+    </footer>
 
 
     <script src="js/main.min.js"></script>
