--- a/app/index.html
+++ b/app/index.html
@@ -720,7 +720,7 @@
             </div>
         </section>
 
-        <div class="video-popup">
+        <div class="video-popup" style="background-image: url('images/decor/video-popup.jpg');">
             <a class="video-popup__play" data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
                 <svg>
                     <use xlink:href="images/sprite.svg#play"></use>
