made header and footer adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,9 @@
                     <img class="logo__image" src="images/icons/logo.svg" alt="logo Glee">
                 </a>
                 <nav class="menu">
+                    <button class="burger">
+                        <span class="burger__line"></span>
+                    </button>
                     <ul class="menu__list">
                         <li class="menu__item">
                             <a class="menu__link menu__link--active link" href="#">
@@ -92,6 +95,7 @@
     </header>
 
     <main class="main">
+        <!--
         <h1 class="sr-only">clothes shop Glee</h1>
         <section class="slider-top">
             <h2 class="sr-only">clothes shop Glee</h2>
@@ -885,8 +889,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
-
+        </div> -->
 
     </main>
 
@@ -916,7 +919,7 @@
                     </address>
                 </div>
                 <div class="footer__columns">
-                    <h2 class="footer__title">
+                    <h2 class="footer__title footer__title--slide">
                         Services
                     </h2>
                     <ul class="footer__list">
@@ -948,7 +951,7 @@
                     </ul>
                 </div>
                 <div class="footer__columns">
-                    <h2 class="footer__title">
+                    <h2 class="footer__title footer__title--slide">
                         Account
                     </h2>
                     <ul class="footer__list">
@@ -994,7 +997,7 @@
             </div>
             <div class="footer__bottom">
                 <p class="footer__copy">©2020 CopyRight Example. All rights reserved.</p>
-                <nav class="menu">
+                <nav class="menu menu--footer">
                     <ul class="menu__list">
                         <li class="menu__item menu__item--footer">
                             <a class="menu__link link" href="#">
