made the adaptive of the home page and sticky header

--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,6 @@
     </header>
 
     <main class="main">
-        <!--
         <h1 class="sr-only">clothes shop Glee</h1>
         <section class="slider-top">
             <h2 class="sr-only">clothes shop Glee</h2>
@@ -889,7 +888,7 @@
                     </li>
                 </ul>
             </div>
-        </div> -->
+        </div>
 
     </main>
 
