added product page

--- a/app/html/parts/cards/_product-card.html
+++ b/app/html/parts/cards/_product-card.html
@@ -1,34 +1,56 @@
 <article class="product-card">
-    <div class="product-card__box">
-        <img class="product-card__img" src="images/products/item@@number.png" alt="Wooden radio">
-        <ul class="product-card__list">
-            <li class="product-card__item">
-                <a class="circle-btn circle-btn--icon" href="#">
-                    <svg>
-                        <use xlink:href="images/sprite.svg#search"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="product-card__item">
-                <button class="circle-btn circle-btn--icon" href="#">
-                    <svg>
-                        <use xlink:href="images/sprite.svg#basket"></use>
-                    </svg>
-                </button>
-            </li>
-            <li class="product-card__itam">
-                <button class="circle-btn circle-btn--icon" href="#">
-                    <svg>
-                        <use xlink:href="images/sprite.svg#like"></use>
-                    </svg>
-                </button>
-            </li>
-        </ul>
+    <div class="product-card__img-wrapper">
+        <div class="product-card__box">
+            <img class="product-card__img" src="images/products/item@@number.png" alt="Wooden radio">
+            <ul class="product-card__list">
+                <li class="product-card__item">
+                    <a class="circle-btn circle-btn--icon" href="#">
+                        <svg>
+                            <use xlink:href="images/sprite.svg#search"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="product-card__item">
+                    <button class="circle-btn circle-btn--icon" href="#">
+                        <svg>
+                            <use xlink:href="images/sprite.svg#basket"></use>
+                        </svg>
+                    </button>
+                </li>
+                <li class="product-card__itam">
+                    <button class="circle-btn circle-btn--icon" href="#">
+                        <svg>
+                            <use xlink:href="images/sprite.svg#like"></use>
+                        </svg>
+                    </button>
+                </li>
+            </ul>
+        </div>
     </div>
-    <h3 class="product-card__subtitle">
-        @@title
-    </h3>
-    <span class="product-card__cost">
-        <span class="product-card__currency">$</span>@@cost
-    </span>
+    <div class="product-card__content">
+        <h3 class="product-card__subtitle">
+            @@title
+        </h3>
+        <div class="product-card__star star list-disable" data-rateyo-star-width="18px" data-rateyo-read-only="true"></div>
+        <span class="product-card__cost">
+            <span class="product-card__currency">$</span>@@cost
+        </span>
+        <div class="product-card__text list-disable">
+            <p>
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            </p>
+        </div>
+        <div class="product-card__icons list-disable">
+            <button class="product-card__icon circle-btn">
+                <svg class="">
+                    <use xlink:href="images/sprite.svg#basket"></use>
+                </svg>
+            </button>
+            <button class="product-card__icon circle-btn">
+                <svg class="">
+                    <use xlink:href="images/sprite.svg#like"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
 </article>
